# lame-wav2mp3

./: LICENSE  README.md
gtest/: gCPPTEST.cpp
src/: CMakeLists.txt  wav2mp3.cpp  wav2mp3.hpp
